# rusty-primes

./: .gitignore  Cargo.toml  README.md  pyproject.toml
rusty_primes/: __main__.py
rusty_primes_pythonic/: __main__.py  compare_primes.py  comparison.py  pythonic_primes.py  utils.py
src/: lib.rs
