[project]
name = "rusty-primes"
version = "0.1.0"
description = "Count primes, blazingly fast. 🚀"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"


[tool.maturin]
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
features = ["pyo3/extension-module"]